--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -5,7 +5,7 @@
 
     main {
         grid-template-columns: 1fr 2fr 1fr;
-        grid-template-rows: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
       }
     
       .event {
@@ -16,7 +16,8 @@
       .hero {
         grid-column: 2/3;
         grid-row: 1/3;
-        height: 86%;
+        height: 95%;
+        padding: 0;
       }
     
       .spotlights {
