--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -16,7 +16,7 @@
 /* HEADER SECTION */
 header{
     font-family: 'Nixie One', cursive;
-    background-color: gray;
+    background-color: #276490;
     display: flex;
     flex-direction: column;
 }
@@ -67,7 +67,7 @@ body{
 
 /* Main */
 
-main {
+.main-home {
     padding: 1.6rem;
 }
   
@@ -125,7 +125,7 @@ main section {
 
 footer {
     font-family: 'Nixie One', cursive;
-    background:gray;
+    background:#276490;
     padding: 1.6rem;
     text-align: center;
   }
@@ -278,3 +278,65 @@ nav ul li a:hover {
   margin-top: -225px;
 }
 
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.h1-gallery {
+  margin-top: 10px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.grid-gallery {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 2px;
+  justify-content: center;
+  justify-items: center;
+  text-align: center;
+  padding: 10px 10px 30px 10px;
+}
+
+
+.gallery-item {
+  padding: 10px 10px 20px 10px;
+  border: 2px solid #BFBFBF;
+  background-color: white;
+  border-radius: 1em;
+  box-shadow: 10px 10px 5px #aaaaaa;
+}
+
+figure img {
+  grid-column: auto;
+  width: 250px;
+  height: 250px;
+  padding: 0px;
+  align-items: center;
+  justify-items: center;
+  border: 3px solid #ccc;
+border-radius: 1em;
+}
+
+.gallery-item-large,
+.gallery-item-large-2,
+.gallery-item-large-3,
+.gallery-item-large-4,
+.gallery-item-large-5{
+  width: 250px;
+  height: 500px;
+}
+
+.paragraphs-demo{
+  font-size: 15px;
+}
+
+MAIN{
+  background-color: #FFBC00;
+}
+
+.visit{
+  color:white;
+  margin-top: 15px;
+}
