--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -109,4 +109,35 @@ figure img:hover {
   font-size: 30px;
 }
 
+.benefits{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: repeat(5, 0.5fr);
+}
+
+.bendescrip1{
+  grid-column: 3/4;
+  grid-row: 1/2;
+}
+
+.bendescrip2{
+  grid-column:  3/5;
+  grid-row: 2/3;
+}
+
+.bendescrip3{
+  grid-column:  3/5;
+  grid-row: 3/4;
+}
+
+.bendescrip4{
+  grid-column:  3/5;
+  grid-row: 4/5;
+}
+
+.bendescrip5{
+  grid-column:  3/5;
+  grid-row: 5/6;
+}
+
 }
