--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -96,7 +96,7 @@ margin-bottom: 10px;
     display: none;
 }
 
-main section {
+.main-home section {
     border: 1px solid #0f0e17;
     height: 200px;
     margin-top: 1px;
@@ -402,4 +402,80 @@ form{
 
 .benefits{
   display: none;
+}
+
+
+main .listgrid {
+	margin: 0 auto;
+	padding: 0.5rem;
+	max-width: 100%;
+	font-family: "Nixie-One", cursive;
+}
+
+.menudirectory {
+	margin: 1rem auto;
+	padding: 0.5rem;
+	text-align: center;
+}
+
+.menudirectory button {
+	padding: 1rem;
+}
+
+article,
+section {
+	margin: 0.75rem;
+}
+
+.cards section {
+	padding: 0.5rem;
+	background-color: #FFBC00;
+}
+
+.grid {
+	display: grid;
+  grid-template-columns:1fr;
+  max-width: 100%;
+  gap: 20px;
+  margin: 20px;
+  grid-template-rows: 9fr;
+  padding: 1em;
+}
+
+
+.grid section {
+	flex-direction: column;
+	text-align: center;
+}
+
+.grid section > * {
+	margin: 0.1rem;
+}
+
+
+.list section img {
+	 display: none;
+}
+
+section h3 {
+	font-size: 1.5rem;
+}
+
+section a {
+	font-family: "Nixie-One", Arial, sans-serif;
+	font-size: 0.9rem;
+}
+
+img {
+	height: 75px;
+	max-width: 100%;
+}
+
+.cards p {
+  margin: 10px;
+}
+
+.listgrid section {
+  border: 2px solid #0f0e17;
+  margin-top: 1px;
 }
