--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -140,4 +140,30 @@ figure img:hover {
   grid-row: 5/6;
 }
 
+.list section {
+	flex-direction: row;
+	justify-content: left;
+  height: 150px;
+}
+
+.list section > * {
+	margin: 0 1rem;
+	text-align: left;
+}
+
+.list section {
+	display: flex;
+	align-items: center;
+}
+
+.list {
+	display: flex;
+	flex-direction: column;
+}
+
+.grid {
+  grid-template-columns: repeat(auto-fill,minmax(400px, 1fr));  
+  grid-template-rows: repeat(auto-fill,minmax(50px, 1fr));
+}
+
 }
