--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -96,7 +96,7 @@ margin-bottom: 10px;
     display: none;
 }
 
-.main-home section {
+.main section {
     border: 1px solid #0f0e17;
     height: 200px;
     margin-top: 1px;
@@ -453,10 +453,6 @@ section {
 }
 
 
-.list section img {
-	 display: none;
-}
-
 section h3 {
 	font-size: 1.5rem;
 }
@@ -479,3 +475,8 @@ img {
   border: 2px solid #0f0e17;
   margin-top: 1px;
 }
+
+@media (min-width: 700px) {
+	.list section img {
+		display: none;
+	}}
