--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -109,36 +109,6 @@ figure img:hover {
   font-size: 30px;
 }
 
-.benefits{
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: repeat(5, 0.5fr);
-}
-
-.bendescrip1{
-  grid-column: 2/4;
-  grid-row: 1/2;
-}
-
-.bendescrip2{
-  grid-column:  2/5;
-  grid-row: 2/3;
-}
-
-.bendescrip3{
-  grid-column:  2/5;
-  grid-row: 3/4;
-}
-
-.bendescrip4{
-  grid-column:  2/5;
-  grid-row: 4/5;
-}
-
-.bendescrip5{
-  grid-column:  2/5;
-  grid-row: 5/6;
-}
 
 .list section {
 	flex-direction: row;
@@ -166,4 +136,37 @@ figure img:hover {
   grid-template-rows: repeat(auto-fill,minmax(50px, 1fr));
 }
 
+
+.joinpage {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+  
+  .benefits {
+    flex-direction: column;
+  }
+  
+  .benefits div {
+    height: 200px;
+    width: 300px;
+  }
+  
+  .benefits ul li {
+    color: black;
+    margin-top: 10px;
+    list-style-type: disc;
+  }
+
+  form label.top input, form label.top select {
+    padding: .75rem;
+
+}
+
+form fieldset {
+  border: 2px solid #445ba9;
+  border-radius: 10px;
+  padding: 3rem;
+}
 }
