--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -118,4 +118,17 @@
   .h1-gallery{
     font-size: 25px;
   }
+
+  form label.top input, form label.top select {
+    padding: .75rem;
+
+}
+
+form fieldset {
+  border: 2px solid #445ba9;
+  border-radius: 10px;
+  padding: 3rem;
+}
+
+
 }
