--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -96,7 +96,7 @@ margin-bottom: 10px;
     display: none;
 }
 
-.main section {
+main section {
     border: 1px solid #0f0e17;
     height: 200px;
     margin-top: 1px;
@@ -105,6 +105,7 @@ margin-bottom: 10px;
 .spotlights section:last-child {
     display: none;
 }
+
 
 .spotlights h2{
     margin: 1rem;
@@ -122,6 +123,7 @@ margin-bottom: 10px;
   text-align: center;
   padding-bottom: 1rem;
 }
+
 
 
 footer {
