--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -185,7 +185,22 @@ font-size: 18px;
   }
 
   .join p{
-    font-size: 20px;
+    font-size: 18px;
   }
+
+
+  .event h2{
+    font-size: 17px;
+
+    }
+    
+    .event h1{
+      font-size: 18px;
+      }
+    
+      .event p{
+        font-size: 15px;
+      }
+
 
 }
