--- a/bountifulfoods/styles/large.css
+++ b/bountifulfoods/styles/large.css
@@ -5,6 +5,7 @@
 @media screen and (min-width: 60em){
     .site-name-container h1{
         margin-top: 3rem;
+        font-size: 3rem;
     }
 
     .navBar{
